force-app/main/default/objects/Plan__c/Plan__c.object-meta.xml
<CustomObject>
    <description>Products related to Accounts.</description>
    <label>Plan</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>