force-app/main/default/objects/Plan__c/fields/Base_Package_is_Not_Free_Trial__c.field-meta.xml
<CustomField>
    <fullName>Base_Package_is_Not_Free_Trial__c</fullName>
    <description>Used to help determine the Account Type status. See more details on Account Type in Confluence under the Salesforce Documentation.</description>
    <formula>IF( ( basePackage__r.Name &lt;&gt; &quot;Free Trial&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Package is Not Free Trial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>