force-app/main/default/objects/Plan__c/fields/basePackage__c.field-meta.xml
<CustomField>
    <fullName>basePackage__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Base Package</label>
    <referenceTo>Package__c</referenceTo>
    <relationshipLabel>Plans</relationshipLabel>
    <relationshipName>Plans</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>