force-app/main/default/objects/Plan__c/fields/isDefault__c.field-meta.xml
<CustomField>
    <fullName>isDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is the default plan used (for plan&apos;s on this Account).</description>
    <label>isDefault</label>
    <type>Checkbox</type>
</CustomField>