force-app/main/default/objects/Plan__c/fields/quantityStartDate__c.field-meta.xml
<CustomField>
    <fullName>quantityStartDate__c</fullName>
    <label>quantityStartDate</label>
    <type>Date</type>
</CustomField>