force-app/main/default/objects/Plan__c/validationRules/plan_billableType_cannot_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>plan_billableType_cannot_be_null</fullName>
    <active>true</active>
    <description>Do not allow null values for the billableType picklist on Plan</description>
    <errorConditionFormula>ISPICKVAL(billableType__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>billableType__c</errorDisplayField>
    <errorMessage>You must enter a value</errorMessage>
</ValidationRule>