force-app/main/default/objects/Plan__c/validationRules/quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>quantity</fullName>
    <active>true</active>
    <errorConditionFormula>basePackage__r.QuantityEnabled__c == true 
  &amp;&amp; ISNULL(Quantity__c )</errorConditionFormula>
    <errorMessage>Quantity is required for this plan</errorMessage>
</ValidationRule>