force-app/main/default/objects/Plan__c/validationRules/quantity_start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>quantity_start_date</fullName>
    <active>true</active>
    <errorConditionFormula>basePackage__r.QuantityEnabled__c == true 
  &amp;&amp; ISNULL(quantityStartDate__c )</errorConditionFormula>
    <errorMessage>Quantity Start Date is required for this plan</errorMessage>
</ValidationRule>