force-app/main/default/objects/Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>account__c</columns>
    <columns>basePackage__c</columns>
    <columns>billableType__c</columns>
    <columns>startDate__c</columns>
    <columns>endDate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>