force-app/main/default/objects/Plan__c/listViews/Corporate_License.listView-meta.xml
<ListView>
    <fullName>Corporate_License</fullName>
    <columns>NAME</columns>
    <columns>account__c</columns>
    <columns>basePackage__c</columns>
    <columns>startDate__c</columns>
    <columns>endDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>basePackage__c</field>
        <operation>contains</operation>
        <value>Corporate License</value>
    </filters>
    <label>Corporate License</label>
</ListView>