force-app/main/default/objects/Plan__c/listViews/Per_Minute.listView-meta.xml
<ListView>
    <fullName>Per_Minute</fullName>
    <columns>NAME</columns>
    <columns>account__c</columns>
    <columns>basePackage__c</columns>
    <columns>startDate__c</columns>
    <columns>endDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>basePackage__c</field>
        <operation>equals</operation>
        <value>Per-Minute Conferencing</value>
    </filters>
    <label>Per-Minute</label>
</ListView>