force-app/main/default/objects/Plan__c/listViews/Web_Meeting_Legacy.listView-meta.xml
<ListView>
    <fullName>Web_Meeting_Legacy</fullName>
    <columns>NAME</columns>
    <columns>account__c</columns>
    <columns>basePackage__c</columns>
    <columns>startDate__c</columns>
    <columns>endDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>basePackage__c</field>
        <operation>equals</operation>
        <value>Web Meeting</value>
    </filters>
    <label>Web Meeting (Legacy)</label>
</ListView>